# puffinflow

./: .dockerignore  .gitignore  .gitignore:Zone.Identifier  .pre-commit-config.yaml  .trufflehog.yml  BENCHMARKS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  debug_dynamic_flow.py  debug_integration_failure.py  debug_state_execution_detailed.py  orchestration_benchmark_results_20250817_214046.json  orchestration_benchmark_results_20250817_214220.json  pyproject.toml  pytest.ini  run_tests.py  test_no_transitions.py  test_simple_dependency.py  test_state_order_debug.py
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  question.md  security_vulnerability.yml
.github/workflows/: .pre-commit-config.yaml  Makefile  ci-cd.yml  ci.yml  compliance.yml  dependency-audit.yml  docs.yml  performance.yml  release.yml  security-scan.yml  security.yml
benchmark_results/: benchmark_results_20250707_120316.json  benchmark_results_20250817_154157.json  benchmark_results_20250817_155751.json
benchmarks/: Dockerfile  README.md  benchmark.py  benchmark_coordination.py  benchmark_core_agent.py  benchmark_framework_comparison.py  benchmark_observability.py  benchmark_orchestration_metrics.py  benchmark_resource_management.py  run_all_benchmarks.py  simple_benchmark.py
benchmarks/benchmark_results/: benchmark_results_20250817_175706.json
doc-site/: App.tsx  index.css  index.html  metadata.json  types.d.ts  vercel.json  vercel.json:Zone.Identifier
doc-site/components/: CodeBlock.tsx  CodeWindow.tsx  CodeWindow.tsx:Zone.Identifier  Comparison.tsx  CtaSection.tsx  DocsPage.tsx  FeatureShowcase.tsx  Footer.tsx  Header.tsx  Hero.tsx  Icons.tsx  ModernCTA.tsx  ModernFeatures.tsx  ModernStats.tsx  NewHero.tsx  NewQuickStart.tsx  ProductionGap.tsx  PuffinLogo.tsx  QuickStart.tsx  ScalingProblem.tsx  UseCases.tsx  WhyPuffinflow.tsx
doc-site/components/docs/: api-reference.ts  api-reference.ts.backup  best-practices.ts  checkpointing.ts  context-and-data.ts  coordination.ts  deployment.ts  error-handling.ts  getting-started.ts  introduction.ts  multiagent.ts  observability.ts  rag-recipe.ts  reliability.ts  resource-management.ts  resources.ts  troubleshooting.ts
docs/: CI-CD.md  Makefile  README.md  requirements.txt
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  security.rst
docs/source/api/: agent.rst  coordination.rst  index.rst  observability.rst  reliability.rst  resources.rst
docs/source/guides/: advanced.rst  examples.rst  migration.rst  quickstart.rst
examples/: README.md  __init__.py  advanced_workflows.py  basic_agent.py  coordination_examples.py  monitoring_example.py  observability_demo.py  reliability_patterns.py  resource_management.py  run_all_examples.py  test_examples.py
marketing/: dev-to.md  hacker-news.md  launch-schedule.md  linkedin.md  lobsters.md  product-hunt.md  reddit-dataengineering.md  reddit-langchain.md  reddit-localllama.md  reddit-machinelearning.md  reddit-opensource.md  reddit-python.md  twitter.md
rust/src/: agent_core.rs  bitset.rs  core.rs  error.rs  heap.rs  lib.rs  metadata.rs
scripts/: run-security-scan.bat  run-security-scan.py  test-trufflehog.py
src/puffinflow/: __init__.py  version.py
src/puffinflow/core/: __init__.py  config.py
studio/api/: config.py  db.py  main.py  models.py
studio/api/routes/: codegen.py  deploy.py  eval.py  projects.py  workflows.py
studio/api/services/: codegen_service.py  deploy_service.py  eval_service.py
studio/cli/: main.py  scaffold.py
studio/codegen/: __init__.py  compilers.py  formatter.py  generator.py  ir.py  reverse_parser.py
studio/codegen/deploy/: __init__.py  base.py  docker_gen.py  modal_gen.py
studio/eval/: __init__.py  engine.py  scorers.py  suite.py
studio/web/: package-lock.json  package.json  tailwind.config.ts
temp_venv/: pyvenv.cfg
tests/: README.md  conftest.py
tests/docs_examples/: __init__.py  test_all_documentation_examples.py  test_api_reference_examples.py  test_best_practices_examples.py  test_checkpointing_examples.py  test_context_and_data_examples.py  test_coordination_examples.py  test_error_handling_examples.py  test_getting_started_examples.py  test_introduction_examples.py  test_multiagent_examples.py  test_observability_examples.py  test_reliability_examples.py  test_resource_management_examples.py
tests/e2e/: __init__.py  test_complete_workflows.py  test_microservices_scenarios.py
tests/integration/: __init__.py  test_agent_coordination.py  test_resource_reliability.py  test_resource_reliability_fixed.py  test_working_agents.py
tests/unit/: test_config.py  test_init.py  test_version.py
tests/unit/agent/: test_agent_core.py  test_auto_discovery.py  test_base.py  test_builder.py  test_checkpoint.py  test_checkpoint_backends.py  test_checkpoint_serializer.py  test_command.py  test_context.py  test_core.py  test_decorators.py  test_dependencies.py  test_drain.py  test_durable_execution.py  test_execution_modes.py  test_init.py  test_reducers.py  test_scheduling.py  test_send.py  test_state.py  test_streaming.py  test_streaming_endpoint.py  test_subgraph.py  test_validation.py
tests/unit/coordination/: test_agent_group.py  test_agent_pool.py  test_agent_team.py  test_coordinator.py  test_deadlock.py  test_fluent_api.py  test_init.py  test_primitives.py  test_rate_limiter.py
tests/unit/core/: test_init.py
tests/unit/monitoring/: test_alerting.py  test_config.py  test_context.py  test_core.py  test_decorators.py  test_events.py  test_interfaces.py  test_metrics.py  test_observability_agent.py  test_tracing.py
tests/unit/observability/: test_agent.py  test_alerting.py  test_config.py  test_context.py  test_core.py  test_core_simple.py  test_decorators.py  test_events.py  test_init.py  test_interfaces.py  test_metrics.py  test_tracing.py
tests/unit/reliability/: test_bulkhead.py  test_circuit_breaker.py  test_init.py  test_leak_detector.py
tests/unit/resources/: test_allocation.py  (+4 more)
(+111 files in other folders)
