[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "puffinflow"
dynamic = ["version"]
description = "A powerful Python workflow orchestration framework with advanced resource management"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Mohamed Ahmed", email = "your.email@example.com" },
]
maintainers = [
    { name = "Mohamed Ahmed", email = "your.email@example.com" },
]
keywords = [
    "workflow",
    "orchestration",
    "async",
    "state-management",
    "resource-allocation",
    "task-execution",
    "distributed-systems",
    "monitoring",
    "coordination",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Monitoring",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "structlog>=23.1.0",
    "typing-extensions>=4.8.0;python_version<'3.11'",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "tox>=4.11.0",
]

# Documentation dependencies
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
]

# CLI dependencies
cli = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "click>=8.1.0",
]

# Monitoring and observability
monitoring = [
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-asyncio>=0.43b0",
]

# Integration dependencies
integrations = [
    "fastapi>=0.108.0",
    "celery>=5.3.0",
    "kubernetes>=28.0.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "psutil>=5.9.0",
]

# All optional dependencies combined
all = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-asyncio>=0.43b0",
    "fastapi>=0.108.0",
    "celery>=5.3.0",
    "kubernetes>=28.0.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/puffinflow"
Documentation = "https://puffinflow.readthedocs.io"
Repository = "https://github.com/yourusername/puffinflow.git"
"Bug Tracker" = "https://github.com/yourusername/puffinflow/issues"
Changelog = "https://github.com/yourusername/puffinflow/blob/main/CHANGELOG.md"
"Funding" = "https://github.com/sponsors/yourusername"

[project.scripts]
puffinflow = "puffinflow.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["puffinflow*"]

[tool.setuptools_scm]
write_to = "src/puffinflow/version.py"

# Modern Python tooling configuration
[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # `zip()` without an explicit `strict=` parameter
]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["E501", "B018", "S101"]
"docs/**/*" = ["E501"]

[tool.ruff.isort]
known-first-party = ["puffinflow"]
force-single-line = false
split-on-trailing-comma = true

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | src/puffinflow/version\.py
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=src/puffinflow",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=85",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as benchmarks",
    "asyncio: marks tests as requiring asyncio",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "src/puffinflow/version.py",
    "tests/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "TYPE_CHECKING",
]
show_missing = true
precision = 2
fail_under = 85

[tool.coverage.html]
directory = "htmlcov"